[package]
name = "map-together-server"
version = "0.1.0"
edition = "2021"
default-run = "map-together-server"

[[bin]]
name = "map-together-server"
path = "src/main.rs"


[[bin]]
name = "client-bot"
path = "src/client_bot.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.35"
futures = "0.3.30"
lazy_static = "1"
log = "0.4"
lru = "0.12.3"
rand = { version = "0.8.5", features = [] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = { version = "4.3.3", features = ["colored", "timestamps"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
